/* Nama file    : Pajak.java 
 * Deskripsi    : program interface Pajak
 * Pembuat      : Yuma Hazza Yuditama
 * NIM          : 24060124120035
 * Tanggal      : 18 Maret 2026
*/

public interface Pajak{
    // menghitung pajak
    public double hitungPajak();
    
}