public class DriverNotAvailableException extends Exception {
    public DriverNotAvailableException(String pesan) {
        super(pesan);
    }
}