/* Nama file    : Motor.java 
 * Deskripsi    : program class Motor
 * Pembuat      : Yuma Hazza Yuditama
 * NIM          : 24060124120035
 * Tanggal      : 26 Maret 2026
 * */

public class Motor extends Kendaraan{
    /* ATRIBUT */

    /* METHOD */
    /* KONSTRUKTOR */
    public Motor(Driver driver, String PlatNomor, String Model){
        super(driver, PlatNomor, "Motor", Model, 2);
        this.tarifKendaraan = 3000;
    }

    /* SELEKTOR */

    /* MUTATOR */

    /* METHOD LAINNYA */


}