' Generated by UML Generator
' Encoded: lLXVRzis47_tfo3W5skHWxpinS22fdM7fbs2eCdwCWm1BJ4s8uaIHCfRr_MxxqYAr9saP6anxCswE_xk_ntfLzhmrdHLkT25L0rlUSMoacjzOKmhTvqHbrcjRkLVWfqj3Z8NB9DjLeh5macnDrmVs9S5OoVsrog9lx9EcxeIxORT2DLL3LVxbFt12zDjs2zrniijDo9bHPsB3Ri5NPR_o4kkx8dM_U8gPKOMmcpOfxhB3g9DsL4S9EZVi0z2vM0kLqxdNfWxtig7dwNYvIhPCAcCfJTjhOM-t_7FlBLahsdnDTY_bNjfUEbSMEyaY5tabGGRyhhRWPj01OWZEDx6mq1RM-p-h7SwVFn_VgUCOrDJDZOq1EPrTCj683fcMJVz4HGQO6Z4c81ksB6MUI-6e7jZ8Ev8v1lJuZWWyb5aGZPc5P26TBNoA5gVBLNVNbxXf1ZHQf5Blc6xkYu5LvROSWDid4-VEmUqalcG1CKhFdo9YiiICUjt3Vv2gXE45q9-RGMeOq3zw6oXIO0WtlLshw0NJQUZ-IYEKaUX1BjtqZKvr5CFh8kwVStRBk0ZW5pgfkIVBzL3_LHKhsjpSGIdEPny-sSc6YDhvNlx6O5L8xIjtH2B21hhr6ShTn2RNXTGbc0FnAcgSMCj7uMI6XCgQ9GI4mhUS0sjfaCnBOsjiAWka7sU8tb53KZPpLXzojvZvIcxmgfJze4eJYXwI7n4dIJVWK-eJiU46bMXbWcjX7H6diQA9uxHblLs45UfW3U9E4y51kj68I5I8sDTaiPY4ihnJZRYgjx9SeKORWhC5-iLbtrLVh7z8hEl35eLva-xZmxzzllqc5NXIz44ZPE9xkruGQMCIiCYtbSOCYubx1sPi0DdvlI_XGYvPMe_3q_SpsystdKi15kq3pmJx8O_yiBZ7QJfrDuHqCW2QRxJfkMPyHS5s5gLc-DzfozLNTbfVzznEtVx7Zr0UlXz4nSSQbwrtuCq82hD2otHcdJj3iPYvf2nN1WOHZS8SlXj-KU_EkCETRJ95hNKcPqTIsBmplSu-fvTzS_vyuArFpRwkGlFcrw_pGust5PNv5aZ4PlkvckVgb-vtqfuqZWlxe8JbelJueOK-484Q7cF4Vh089pHL25mE53KvZumLk6GMClOZkh1XmLLX3ljesbvk0JYT9qPkF_LtINcm4yXCAlY1XSqRfXGVFsHxxseK2KfYoeI2f_qIRXmyYjwZER95KlUIJDpr-kFZzVPgBwUlOiC6VFJHEQumz550L9Ne8lK4xU0PLmIRW81Lb4v7lk9_NXsTkP6p708ryHovieI0ZO_AMBbpHaDz_EPqoaR3spY64oC6UEIaRgGlVVsw8e0qDnTRecHymtcKSOlXNSnVBH522H9_Fp-Y8nnkysk_CcgQNKT2mEN0-u9-qswmc-beIzmoW3l-vehGG1X8b_cazg_1hm9yQs5dOe2-cIEklFOA9fHZqJCf08EbDZzmaT1FrpziBBZ-5DOJMW5ItXoaCUoxd9-sCg65roITvYBTvZTCt3G20GimV89MZbe_fFeRTtnITtU8eD6RoTD0PzOEJf2Zmma8aJDq--uVQT0GY4VdhtnkdzNrkk_pz4bonDFJy_H24AakEyYBMp9I1Y6NFZtOwmYqAaMIesAC3demZIaph_UUsssSnR3A_67zJfCMdzNTsB3OK-qW57ANdqdKfQ8fD3jr6f0TeyumVGHUO2U88Mu38iTUuOMsUcf9Tj1YAdhzJb19uneFQ4EEb_1mQug_m4
' URL: http://www.plantuml.com/plantuml/uml/lLXVRzis47_tfo3W5skHWxpinS22fdM7fbs2eCdwCWm1BJ4s8uaIHCfRr_MxxqYAr9saP6anxCswE_xk_ntfLzhmrdHLkT25L0rlUSMoacjzOKmhTvqHbrcjRkLVWfqj3Z8NB9DjLeh5macnDrmVs9S5OoVsrog9lx9EcxeIxORT2DLL3LVxbFt12zDjs2zrniijDo9bHPsB3Ri5NPR_o4kkx8dM_U8gPKOMmcpOfxhB3g9DsL4S9EZVi0z2vM0kLqxdNfWxtig7dwNYvIhPCAcCfJTjhOM-t_7FlBLahsdnDTY_bNjfUEbSMEyaY5tabGGRyhhRWPj01OWZEDx6mq1RM-p-h7SwVFn_VgUCOrDJDZOq1EPrTCj683fcMJVz4HGQO6Z4c81ksB6MUI-6e7jZ8Ev8v1lJuZWWyb5aGZPc5P26TBNoA5gVBLNVNbxXf1ZHQf5Blc6xkYu5LvROSWDid4-VEmUqalcG1CKhFdo9YiiICUjt3Vv2gXE45q9-RGMeOq3zw6oXIO0WtlLshw0NJQUZ-IYEKaUX1BjtqZKvr5CFh8kwVStRBk0ZW5pgfkIVBzL3_LHKhsjpSGIdEPny-sSc6YDhvNlx6O5L8xIjtH2B21hhr6ShTn2RNXTGbc0FnAcgSMCj7uMI6XCgQ9GI4mhUS0sjfaCnBOsjiAWka7sU8tb53KZPpLXzojvZvIcxmgfJze4eJYXwI7n4dIJVWK-eJiU46bMXbWcjX7H6diQA9uxHblLs45UfW3U9E4y51kj68I5I8sDTaiPY4ihnJZRYgjx9SeKORWhC5-iLbtrLVh7z8hEl35eLva-xZmxzzllqc5NXIz44ZPE9xkruGQMCIiCYtbSOCYubx1sPi0DdvlI_XGYvPMe_3q_SpsystdKi15kq3pmJx8O_yiBZ7QJfrDuHqCW2QRxJfkMPyHS5s5gLc-DzfozLNTbfVzznEtVx7Zr0UlXz4nSSQbwrtuCq82hD2otHcdJj3iPYvf2nN1WOHZS8SlXj-KU_EkCETRJ95hNKcPqTIsBmplSu-fvTzS_vyuArFpRwkGlFcrw_pGust5PNv5aZ4PlkvckVgb-vtqfuqZWlxe8JbelJueOK-484Q7cF4Vh089pHL25mE53KvZumLk6GMClOZkh1XmLLX3ljesbvk0JYT9qPkF_LtINcm4yXCAlY1XSqRfXGVFsHxxseK2KfYoeI2f_qIRXmyYjwZER95KlUIJDpr-kFZzVPgBwUlOiC6VFJHEQumz550L9Ne8lK4xU0PLmIRW81Lb4v7lk9_NXsTkP6p708ryHovieI0ZO_AMBbpHaDz_EPqoaR3spY64oC6UEIaRgGlVVsw8e0qDnTRecHymtcKSOlXNSnVBH522H9_Fp-Y8nnkysk_CcgQNKT2mEN0-u9-qswmc-beIzmoW3l-vehGG1X8b_cazg_1hm9yQs5dOe2-cIEklFOA9fHZqJCf08EbDZzmaT1FrpziBBZ-5DOJMW5ItXoaCUoxd9-sCg65roITvYBTvZTCt3G20GimV89MZbe_fFeRTtnITtU8eD6RoTD0PzOEJf2Zmma8aJDq--uVQT0GY4VdhtnkdzNrkk_pz4bonDFJy_H24AakEyYBMp9I1Y6NFZtOwmYqAaMIesAC3demZIaph_UUsssSnR3A_67zJfCMdzNTsB3OK-qW57ANdqdKfQ8fD3jr6f0TeyumVGHUO2U88Mu38iTUuOMsUcf9Tj1YAdhzJb19uneFQ4EEb_1mQug_m4
' Generated on: 2026-03-28T23:54:17.454447800

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cash {
  +Cash()
  +Cash(customer: Penumpang, waktu: LocalDate, kode: String, jalan: Perjalanan, tiket: Voucher, vehicle: Kendaraan)
  +getTarifFinal(): int
  +proses_bayar(): String
}

class Digital {
  -biayaAdmin: double
  -provider: String
  --
  +Digital()
  +Digital(customer: Penumpang, waktu: LocalDate, kode: String, jalan: Perjalanan, tiket: Voucher, vehicle: Kendaraan, admin: double, provider: String)
  +getBiayaAdmin(): double
  +getProvider(): String
  +setProvider(provider: String): void
  +setBiayaAdmin(admin: int): void
  +getTarifFinal(): int
  +proses_bayar(): String
  +printReceipt(): void
}

class Driver {
  -noSIM: String
  -tersedia: boolean
  -rating: double
  --
  +Driver(id: String, nama: String, email: String, noHp: String, noSIM: String)
  +Driver()
  +getNoSIM(): String
  +getRating(): double
  +setTersedia(status: boolean): void
  +isTersedia(): boolean
  +updateRating(skorBaru: double): void
  +displayInfo(): void
}

class DriverNotAvailableException {
  +DriverNotAvailableException(pesan: String)
}

class Kendaraan {
  -driver: Driver
  #platNomor: String
  #jenis: String
  #model: String
  #kapasitas: int
  #tarifKendaraan: int
  --
  +Kendaraan(driver: Driver, PlatNomor: String, Jenis: String, Model: String, Kapasitas: int)
  +Kendaraan()
  +getPlatNomor(): String
  +getJenis(): String
  +getModel(): String
  +getKapasitas(): int
  +getTarifKendaraan(): int
  +setPlatNomor(PlatNomor: String): void
  +setJenis(Jenis: String): void
  +setModel(Model: String): void
  +setKapasitas(Kapasitas: int): void
  +setTarifKendaraan(tarif: int): void
  +infoTipeMobil(): void
  +printInfo(): void
}

class Main {
  +{static} main(args: String[]): void
}

class Mobil {
  -tipeMobil: String
  --
  +Mobil(driver: Driver, PlatNomor: String, Model: String, tipe_mobil: String)
  +getTipeMobil(): String
  +setTipeMobil(tipe_mobil: String): void
  +infoTipeMobil(): void
}

class Motor {
  +Motor(driver: Driver, PlatNomor: String, Model: String)
}

interface Pajak {
  +hitungPajak(): double
}

abstract class Pembayaran {
  #nominal_uang: int
  #harga_perjalanan: int
  #tanggal_transaksi: LocalDate
  #kode_transaksi: String
  -detailPerjalanan: Perjalanan
  -voucher: Voucher
  -vehicle: Kendaraan
  -customer: Penumpang
  --
  +Pembayaran()
  +Pembayaran(customer: Penumpang, tanggal_transaksi: LocalDate, kode: String, jalan: Perjalanan, voucher: Voucher, vehicle: Kendaraan)
  +getCustomer(): Penumpang
  +setCustomer(cust: Penumpang): void
  +getNominalUang(): int
  +getTanggalTransaksi(): LocalDate
  +getKodeTransaksi(): String
  +setTanggalTransaksi(tanggal: LocalDate): void
  +setKodeTransaksi(kode: String): void
  +getVoucher(): Voucher
  +getDetailPerjalanan(): Perjalanan
  +getVehicle(): Kendaraan
  +getTarif(): int
  +getTarifFinal(): int
  +proses_bayar(): String
  +printReceipt(): void
}

class Penumpang {
  -alamat: String
  -uang: int
  --
  +Penumpang(id: String, nama: String, email: String, noHp: String, alamat: String, uang: int)
  +Penumpang()
  +setAlamat(alamat: String): void
  +setUang(duit: int): void
  +getAlamat(): String
  +getUang(): int
  +displayInfo(): void
}

class Perjalanan {
  #idPerjalanan: String
  #jarak: double
  #tarifKendaraan: int
  #{static} hargaPerkm: int = 5000
  #kendaraan: Kendaraan
  #driver: Driver
  #penumpang: Penumpang
  --
  +Perjalanan(idPerjalanan: String, penumpang: Penumpang, driver: Driver, jarak: double, kendaraan: Kendaraan)
  +Perjalanan()
  +setJarak(jarak: double): void
  +setIDPerjalanan(id: String): void
  +getJarak(): double
  +getHargaPerkm(): int
  +getIDPerjalanan(): String
  +hitungPajak(): double
  +hitungTarif(): int
  +printInfo(): void
}

abstract class Person {
  #id: String
  #nama: String
  #email: String
  #noHp: String
  --
  +Person(id: String, nama: String, email: String, noHp: String)
  +Person()
  +getId(): String
  +getNama(): String
  +getEmail(): String
  +getNoHp(): String
  +setNama(nama: String): void
  +setEmail(email: String): void
  +setNoHp(noHp: String): void
  +displayInfo(): void
}

class Voucher {
  -kodeVoucher: String
  -diskon: double
  -sudahDipakai: boolean
  --
  +Voucher(kodeVoucher: String, diskon: double)
  +Voucher()
  +getKodeVoucher(): String
  +getDiskon(): double
  +getSudahDipakai(): boolean
  +setKodeVoucher(kode: String): void
  +setDiskon(diskon: double): void
  +setSudahDipakai(status: boolean): void
  +gunakanVoucher(): void
  +printInfo(): void
}

Cash --|> Pembayaran
Cash ..> Penumpang
Cash ..> Perjalanan
Cash ..> Voucher
Cash ..> Kendaraan
Digital --|> Pembayaran
Digital ..> Penumpang
Digital ..> Perjalanan
Digital ..> Voucher
Digital ..> Kendaraan
Driver --|> Person
Kendaraan *-- Driver
Mobil --|> Kendaraan
Mobil ..> Driver
Motor --|> Kendaraan
Motor ..> Driver
Pembayaran *-- Perjalanan
Pembayaran *-- Voucher
Pembayaran *-- Kendaraan
Pembayaran *-- Penumpang
Penumpang --|> Person
Perjalanan ..|> Pajak
Perjalanan --> Kendaraan
Perjalanan --> Driver
Perjalanan --> Penumpang
@enduml